--- a/website/package.json
+++ b/website/package.json
@@ -7,6 +7,8 @@
 		"node": "*"
 	},
 	"devDependencies": {
+		"grunt": "",
+		"grunt-broccoli": "",
 		"broccoli": "",
 		"broccoli-rework": "",
 		"broccoli-autoprefixer": "",
