--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"rework-clone": "0.1.x",
 		"rework-plugin-ease": "1.0.x",
 		"rework-plugin-references": "1.0.x",
-		"rework-plugin-mixin": "1.0.x"
+		"rework-plugin-mixin": "1.0.x",
+		"rework-macro": "0.1.x"
 	}
 }
