use rework-palette

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"rework-plugin-ease": "1.0.x",
 		"rework-plugin-references": "1.0.x",
 		"rework-plugin-mixin": "1.0.x",
-		"rework-macro": "0.1.x"
+		"rework-macro": "0.1.x",
+		"rework-palette": "0.0.x"
 	}
 }
