--- a/package.json
+++ b/package.json
@@ -15,10 +15,7 @@
 		"type": "git",
 		"url": "https://github.com/myfreeweb/nextcss.git"
 	},
-	"license": [{
-		"type": "Apache-2.0",
-		"url": "https://github.com/myfreeweb/nextcss/blob/master/COPYING"
-	}],
+	"license": "Apache-2.0",
 	"bugs": {
 		"url": "https://github.com/myfreeweb/nextcss/issues"
 	},
